BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Clinical_Trial_Co_Investigators_BMS_CN__c.object
<CustomObject>
    <description>Stores Clinical Trial Co-Investigators information (BMS China)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clinical Trial Co-Investigators</relationshipLabel>
        <relationshipName>Clinical_Trial_Co_Investigators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial__c</fullName>
        <label>Clinical Trial</label>
        <referenceTo>Clinical_Trial__c</referenceTo>
        <relationshipLabel>Clinical Trial Co-Investigators</relationshipLabel>
        <relationshipName>Clinical_Trial_Co_Investigators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Co_Investigator_BMS_CN__c</fullName>
        <label>Co_Investigator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Clinical Trial Co-Investigator</label>
    <nameField>
        <label>Clinical Trial Co-Investigators Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Trial Co-Investigators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>